client/src/components/modules/SingleReview.css
.Review-container {
    border: 2px solid var(--grey);
    box-shadow: 0 0 30px -10px var(--offblack);
    border-radius: 32px;
    background-color: var(--cream);
    width: 580px;
    max-height: 600px;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 3%;
    padding-bottom:10px;
}

.Poster-img {
    border-radius: 10px;
    border: 5px solid var(--yellow);
    max-width: 90%;
    max-height: 350px;
    box-shadow: 0 0 50px -10px  #555;
}

.Title-link{

}
.Title-link:hover{
    transform: scale(1.044);
    transition: all .5s ease-in-out;
}

.Review-linkcontainer {
    margin-left: auto;
    margin-right: auto;
    display: inline-flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    width: 90%;
    margin-bottom: 8px;
}

.Not-found {
    font-size: 80px;
    font-weight: 333;
    margin: var(--m) var(--s);
    text-decoration: none;
    color: (--offblack);
}

.movie-info{
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-items: center;
    justify-content: center;
}

.card-heart{
    margin-right: 4px;
    color: var(--heartred);

}

.bar-spacing{
    margin-left: 8px;
    margin-right: 8px;
}

.grey-heart{
    margin-right: 4px;
    color: var(--grey);

}

.comment-icon{
    margin-right: 4px;
    color: #00D6FF;
}

.disguise{
    color: var(--cream);
}

.no-margin{
    margin-right: 16px;
    margin-left:0;
    margin-top:0;
    margin-bottom:0;
    padding: 0 0 0 0;
}

.reviewcard-pfp{
    border: 2px solid var(--offblack);
    border-radius: 25%;
    width: 28px;
    height: 28px;
}

.admin-link:hover{
    text-decoration: underline;
    cursor: pointer;

}

.review-subtitlecontainer{
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: center;
    width: 96%;
    margin-left: auto;
    margin-right: auto;
    margin-top: -2%;
    margin-bottom: 2%;
}

.textnomargin{
    margin: 0 0 0 0;
    padding: 0 0 0 0;
    font-weight: 400;
}

.media-icon{
    margin-right: 10px;
}

.subpicturetext{
    font-weight: 500;
}

